@startuml
'https://plantuml.com/class-diagram

interface EnemyFactory{
    + createEnemyAircraft():AbstractEnemyAircraft
}

class EliteFactory{
    - locationX: int
    - locationY: int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + createEnemyAircraft():AbstractEnemyAircraft
}
class MobFactory{
    - locationX: int
    - locationY: int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + createEnemyAircraft():AbstractEnemyAircraft
}
class ElitePlusFactory{
    - locationX: int
    - locationY: int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + createEnemyAircraft():AbstractEnemyAircraft
}
class BossFactory{
    - locationX: int
    - locationY: int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + BossFactory(int hp)
    + createEnemyAircraft():AbstractEnemyAircraft
}
EnemyFactory <|.. ElitePlusFactory
EnemyFactory <|.. BossFactory
EnemyFactory <|.. EliteFactory
EnemyFactory <|.. MobFactory


abstract AbstractEnemyAircraft{
    # score: int
    # propNum: int
    # propFactory: PropFactory
    + getScore():int
    + forward():void
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + generateNewProp():List<BaseProp>
    + update():int
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + shoot():List<BaseBullet>
    + generateNewProp():List<BaseProp>
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + update():int
}

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + update():int
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
}

AbstractEnemyAircraft <.. EnemyFactory

AbstractEnemyAircraft <|-- EliteEnemy
AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-- ElitePlusEnemy
AbstractEnemyAircraft <|-- BossEnemy
@enduml